--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/dashboard/src",
-  "prefix": "ek-frontend",
+  "prefix": "dashboard",
   "targets": {
     "build": {
       "executor": "@nrwl/angular:webpack-browser",
