--- a/apps/ghc/.eslintrc.json
+++ b/apps/ghc/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "ekFrontend",
+            "prefix": "ghc",
             "style": "camelCase"
           }
         ],
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "ek-frontend",
+            "prefix": "ghc",
             "style": "kebab-case"
           }
         ]
