--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@nebular/eva-icons": "10.0.0",
     "@nebular/theme": "^10.0.0",
-    "@nrwl/angular": "15.8.6",
     "eva-icons": "^1.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +32,7 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "~15.2.0",
     "@angular/language-service": "~15.2.0",
+    "@nrwl/angular": "^15.8.6",
     "@nrwl/cypress": "15.8.6",
     "@nrwl/eslint-plugin-nx": "15.8.6",
     "@nrwl/jest": "15.8.6",
