--- a/apps/ghc/project.json
+++ b/apps/ghc/project.json
@@ -6,6 +6,9 @@
   "prefix": "ghc",
   "targets": {
     "build": {
+      "stylePreprocessorOptions": {
+        "includePaths": [ "libs/ui/src/lib/styles" ]
+      },
       "executor": "@nrwl/angular:webpack-browser",
       "outputs": ["{options.outputPath}"],
       "options": {
