--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~15.2.0",
-    "@angular/cdk": "^14.0.0",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "~15.2.0",
     "@angular/compiler": "~15.2.0",
     "@angular/core": "~15.2.0",
@@ -36,26 +36,45 @@
     "@nrwl/cypress": "15.8.6",
     "@nrwl/eslint-plugin-nx": "15.8.6",
     "@nrwl/jest": "15.8.6",
-    "@nrwl/js": "15.8.6",
+    "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.8.6",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/storybook": "^15.9.2",
     "@nrwl/workspace": "15.8.6",
     "@schematics/angular": "~15.2.0",
+    "@storybook/addon-centered": "^5.3.21",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/angular": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/core-common": "^6.5.15",
+    "@storybook/core-server": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.14",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "html-webpack-plugin": "^5.5.0",
+    "i": "^0.3.7",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
+    "ng-packagr": "~15.2.2",
+    "npm": "^9.6.5",
     "nx": "15.8.6",
+    "postcss": "^8.4.23",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.3.1",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "webpack": "^5.64.0"
   }
 }
