--- a/package.json
+++ b/package.json
@@ -42,13 +42,18 @@
     "@nrwl/storybook": "^15.9.2",
     "@nrwl/workspace": "15.8.6",
     "@schematics/angular": "~15.2.0",
+    "@storybook/addon-a11y": "^7.0.6",
+    "@storybook/addon-actions": "^7.0.6",
     "@storybook/addon-centered": "^5.3.21",
     "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^7.0.6",
+    "@storybook/addon-links": "^7.0.6",
     "@storybook/angular": "^6.5.15",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/core-common": "^6.5.15",
     "@storybook/core-server": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/testing-library": "^0.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
